# llm4data

./: .buildinfo  .gitignore  DEVELOP.md  GUIDE.html  GUIDE.md  LICENSE  Makefile  README.html  README.md  config.toml  example.env  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  gh-pages.yml
_sources/: README.md
_sources/.github/: CODE_OF_CONDUCT.md
_sources/notebooks/examples/getting-started/: setting-up-the-environment.ipynb
docs/: _config.yml  _toc.yml  requirements.txt
llm4data/: __init__.py  configs.py  wdi2name.json
llm4data/augmentation/: Augmentation.html  Augmentation.md
llm4data/augmentation/microdata/: theme_llm.py
llm4data/embeddings/: __init__.py  base.py  docs.py  indicators.py  microdata.py
llm4data/index/: index.py  qdrant.py
llm4data/indicators/: wdi.py
llm4data/llm/indicators/: wdi_sql.py
llm4data/prompts/: base.py  context.py  utils.py
llm4data/prompts/indicators/: templates.py  wdi.py
llm4data/schema/: schema2info.py
llm4data/schema/docs/: migrate_wbdocs_metadata.py  wbdocs.py
llm4data/schema/indicators/: create_wdi_text.py
llm4data/scripts/indexing/: create_field_index.py
llm4data/scripts/indexing/docs/: docs.py  load_docs.py
llm4data/scripts/indexing/indicators/: indicators.py  load_indicators.py
llm4data/sources/indicators/: wdi.py
llm4data/utils/microdata/: helpers.py  paths.py  quality.py  scraper.py
llm4data/utils/system/: cache.py
notebooks/examples/: Getting Started with WDI.ipynb  Setting up the environment.ipynb
notebooks/examples/getting-started/: openai-api.html  openai-api.ipynb  setting-up-services.html  setting-up-services.ipynb  setting-up-the-environment.html  setting-up-the-environment.ipynb
notebooks/examples/indicators/: README.html  README.md
notebooks/examples/indicators/wdi/: getting-started-with-the-wdi.html  getting-started-with-the-wdi.ipynb
scripts/scrapers/indicators/: nada_wdi.py  wdi.py  wdi_db.py
