[tool.poetry]
name = "llm4data"
version = "0.0.1.dev0"
description = ""
authors = ["Aivin V. Solatorio <avsolatorio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
numpy = "^1.24.3"
sqlalchemy = "^2.0.15"
openai-tools = "0.0.0.1.dev3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
