[tool.poetry]
name = "llm4data"
version = "0.0.1.dev0"
description = ""
authors = ["Aivin V. Solatorio <avsolatorio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
numpy = "^1.24.3"
sqlalchemy = "^2.0.15"
openai-tools = "0.0.0.1.dev3"
tomli = "^2.0.1"
langchain = "^0.0.178"

[tool.poetry_bumpversion.file."llm4data/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
